Improve scripts and ran new families

--- a/notebooks/3_sample_incremental_datasets.ipynb
+++ b/notebooks/3_sample_incremental_datasets.ipynb
@@ -36,10 +36,10 @@
     "\n",
     "SEED = [0, 1, 2]\n",
     "# NOTE: to obtain the X-shot from the sota, set MIN_FREQ=2*X and TRAIN_RATIO=0.5\n",
-    "MIN_FREQ = 40\n",
+    "MIN_FREQ = 10 # 10 20 40\n",
     "TRAIN_RATIO = 0.5\n",
     "# set main directories\n",
-    "DATA = 'figer'\n",
+    "DATA = 'figer' # bbn\n",
     "SCENARIO = 'complete' # ['complete', 'single_child']\n",
     "TRAIN_DATA = 'train.json'\n",
     "DEV_DATA = 'dev.json'\n",
@@ -753,10 +753,10 @@
     "            with open(filepath_train_dst, 'w') as dst_train, open(filepath_dev_dst, 'w') as dst_dev:\n",
     "              # IMPORTANT: reset seed\n",
     "              random.seed(seed)\n",
-    "              subset = random.sample(lines, MIN_FREQ)\n",
+    "              random.shuffle(lines)\n",
     "              idx_split = int(MIN_FREQ * TRAIN_RATIO)\n",
-    "              train_lines = subset[:idx_split]\n",
-    "              dev_lines = subset[idx_split:]\n",
+    "              train_lines = lines[:idx_split]\n",
+    "              dev_lines = lines[-idx_split:]\n",
     "              # save\n",
     "              dst_train.writelines(train_lines)\n",
     "              dst_dev.writelines(dev_lines)\n",
